examples/test/testpolicy16038.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16038
  namespace: namespace8
spec:
  podSelector:
    matchLabels:
      key19: value33
      key15: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value17
          key37: value21
          key29: value35
      podSelector:
        matchLabels:
          key1: value3
